[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/icon.png" type="Texture" id=2]
[ext_resource path="res://flower_collision_shape.tres" type="Shape2D" id=3]
[ext_resource path="res://sounds/wav/krok1.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/one-shot-player.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/wav/krok3.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/wav/krok2.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/wav/vzitvec.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/wav/motyka1.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/wav/motyka2.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/wav/motyka3.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Player" type="Area2D"]
position = Vector2( 520, 394 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlantingArea" type="Area2D" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlantingArea"]
shape = ExtResource( 3 )

[node name="WalkingSounds" parent="." instance=ExtResource( 5 )]
samples = [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ) ]

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="MotykaSounds" parent="." instance=ExtResource( 5 )]
samples = [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ]

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Player_area_exited"]
